--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "website for lasu faculty of education",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "kenny",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.22"
   }
 }
