--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "website for lasu faculty of education",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kenny",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
